[gd_scene format=3 uid="uid://caa0u38woucbh"]

[ext_resource type="Texture2D" uid="uid://bu6n5is5xcxhn" path="res://enemy_assets/3 - Skeleton/Standing_Idle (32 x 32).png" id="1_4a83h"]
[ext_resource type="Texture2D" uid="uid://bqk5c7a0vufx2" path="res://enemy_assets/3 - Skeleton/Hurt (32 x 32).png" id="1_a3pup"]
[ext_resource type="Script" uid="uid://dxinfstwlhh7a" path="res://scenes/enemy/enemy.gd" id="1_gl05p"]
[ext_resource type="Texture2D" uid="uid://bwp5rw5m30e8s" path="res://enemy_assets/3 - Skeleton/Limping_Movement (32 x 32).png" id="1_tjssy"]
[ext_resource type="Texture2D" uid="uid://5xyd0xph1srl" path="res://enemy_assets/3 - Skeleton/Inactive (32 x 32).png" id="4_gl05p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a3pup"]
size = Vector2(16, 23)

[sub_resource type="Animation" id="Animation_40wdo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_gl05p"]
resource_name = "hurt"
length = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_a3pup")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.033333335),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_tjssy"]
resource_name = "idle"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_4a83h")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.033333335, 0.06666667, 0.10000001, 0.13333334, 0.16666667, 0.20000002, 0.23333335),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6, 7, 8]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimationPlayer:speed_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.09999999999999964]
}

[sub_resource type="Animation" id="Animation_cwlon"]
resource_name = "inactive"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_gl05p")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_nbhyu"]
resource_name = "walk"
length = 0.18
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_tjssy")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.033333335, 0.06666667, 0.10000001, 0.13333334, 0.16666667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimationPlayer:speed_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gl05p"]
_data = {
&"RESET": SubResource("Animation_40wdo"),
&"hurt": SubResource("Animation_gl05p"),
&"idle": SubResource("Animation_tjssy"),
&"inactive": SubResource("Animation_cwlon"),
&"walk": SubResource("Animation_nbhyu")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tjssy"]
size = Vector2(200, 20)

[node name="enemy" type="CharacterBody2D" unique_id=22923009]
script = ExtResource("1_gl05p")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=837280398]
texture = ExtResource("1_4a83h")
hframes = 9
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=712305766]
position = Vector2(3, 4.5)
shape = SubResource("RectangleShape2D_a3pup")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1386569573]
libraries/ = SubResource("AnimationLibrary_gl05p")
autoplay = &"inactive"
speed_scale = 0.1

[node name="range" type="Area2D" parent="." unique_id=1034373854]
position = Vector2(3, 5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="range" unique_id=1725205709]
shape = SubResource("RectangleShape2D_tjssy")

[node name="Timer" type="Timer" parent="." unique_id=575534072]
one_shot = true

[connection signal="body_entered" from="range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="range" to="." method="_on_range_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
